packages/components/src/components/tabs/tabs.scss
@use "@db-ux/core-foundations/build/styles/variables";
@use "@db-ux/core-foundations/build/styles/colors";
@use "../../styles/internal/form-components";
@use "../../styles/internal/db-puls";
@use "@db-ux/core-foundations/build/styles/helpers";

$pulse-gap-offset: calc(#{variables.$db-border-width-xs} + #{variables.$db-spacing-fixed-2xs});

%horizontal-pulse {
	.db-tab-item {
		@include db-puls.set-db-puls-horizontal;

		&::after {
			inset-block-end: calc(-1 * #{$pulse-gap-offset}) !important;
		}

		&[aria-selected="true"] {
			@include db-puls.show-db-puls-horizontal;

			&::after {
				width: 100%;
			}
		}
	}
}

%vertical-pulse {
	.db-tab-item {
		@include db-puls.set-db-puls-vertical;

		&::after {
			inset-inline-start: calc(-1 * var(--db-tabs-line-gap-vertical, 0px)) !important;
			inset-inline-end: auto !important;
			z-index: 5;
		}

		&[aria-selected="true"] {
			@include db-puls.show-db-puls-vertical;

			&::after {
				height: 100%;
			}
		}
	}
}

%pulse-track {
	background-color: colors.$db-adaptive-bg-basic-transparent-semi-default;
	content: "";
	border-radius: variables.$db-border-radius-xs;
	position: absolute;
}

.db-tabs {
	$db-tabs-z-index-tab-list: 20;

	@include helpers.display(flex);
	inline-size: 100%;
	position: relative;

	.db-tab-panel {
		padding: 0 variables.$db-spacing-fixed-xs 0 variables.$db-spacing-fixed-xs;
		position: relative;
		z-index: 1;
	}

	.db-tab-list {
		position: relative;
		z-index: $db-tabs-z-index-tab-list;

		db-tab-item, dbtabitem { display: contents; }
	}

	&:not([data-orientation="vertical"]) {
		flex-flow: column wrap;

		.db-tab-list {
			padding-block-end: variables.$db-spacing-fixed-2xs;
			padding-block-start: calc(#{variables.$db-border-width-2xs} + #{variables.$db-border-width-xs} * 2);
			margin-block-start: calc(-1 * (#{variables.$db-border-width-2xs} + #{variables.$db-border-width-xs} * 2));
			@extend %horizontal-pulse;

			background-image: linear-gradient(
				colors.$db-adaptive-bg-basic-transparent-semi-default,
				colors.$db-adaptive-bg-basic-transparent-semi-default
			);
			background-position: left bottom;
			background-repeat: no-repeat;
			background-origin: content-box;
			background-attachment: local;
			background-size: 100% variables.$db-border-width-xs;

			.db-tab-item {
				margin-block-end: $pulse-gap-offset;
			}

			&[role="tablist"], .db-tab-list {
					display: flex;
					align-items: flex-end;
					overflow: auto hidden;
					inline-size: 100%;
					padding-inline: calc(#{variables.$db-border-width-2xs} + #{variables.$db-border-width-xs} * 2);
					box-sizing: content-box;
				}
		}
	}

	&[data-orientation="vertical"] {
		flex-direction: row;

		.db-tab-list {
			--db-tabs-line-gap-vertical: #{$pulse-gap-offset};

			[data-density="expressive"] & {
				--db-tabs-line-gap-vertical: #{$pulse-gap-offset};
			}

			min-inline-size: variables.$db-sizing-3xl;
			max-inline-size: variables.$db-sizing-3xl;
			padding-inline-start: var(--db-tabs-line-gap-vertical);
			padding-inline-end: variables.$db-spacing-fixed-xs;
			margin-block-end: auto;
			@extend %vertical-pulse;

			&::before {
				@extend %pulse-track;
				display: block !important;
				inset-inline-start: 0;
				inset-block: 0;
				inline-size: variables.$db-border-width-xs;
				z-index: 1;
			}

			&[role="tablist"], .db-tab-list {
				display: flex;
				flex-direction: column;
				align-items: flex-start;
			}
		}
	}

	&[data-width="full"] {
		.db-tab-list {
			inline-size: 100%;
		}

		.db-tab-item {
			flex-grow: 1;
			flex-basis: 0;
			width: 0;
			justify-content: flex-start;
		}

		&[data-content-alignment="center"] {
			.db-tab-item {
				text-align: center;
				justify-content: center;
			}
		}
	}

	&[data-scroll-behavior="arrows"] {
		$db-tabs-z-index-button-background: 21;
		$db-tabs-z-index-button: 22;

		.db-tab-list::-webkit-scrollbar {
			display: none;
		}

		&:not([data-orientation="vertical"]) {
			.db-tab-list {
				padding-inline: variables.$db-sizing-md;
				background-image: linear-gradient(
					colors.$db-adaptive-bg-basic-transparent-semi-default,
					colors.$db-adaptive-bg-basic-transparent-semi-default
				);
				background-position: center bottom;
				background-repeat: no-repeat;
				background-attachment: scroll;
				background-size: 100% variables.$db-border-width-xs;
			}

			&:has(.tabs-scroll-left)::before,
			&:has(.tabs-scroll-right)::after {
				content: "";
				position: absolute;
				z-index: $db-tabs-z-index-button-background;
				background-color: colors.$db-adaptive-bg-basic-level-1-default;
				inline-size: variables.$db-sizing-md;
				block-size: calc(#{variables.$db-sizing-md} + #{$pulse-gap-offset});
				inset-block-start: 0;
			}

			[data-density="functional"] &:has(.tabs-scroll-left)::before,
			[data-density="functional"] &:has(.tabs-scroll-right)::after {
				block-size: calc(#{variables.$db-sizing-sm} + #{$pulse-gap-offset});
			}

			[data-density="expressive"] &:has(.tabs-scroll-left)::before,
			[data-density="expressive"] &:has(.tabs-scroll-right)::after {
				block-size: calc(#{variables.$db-sizing-lg} + #{$pulse-gap-offset});
			}

			&:has(.tabs-scroll-left)::before {
				inset-inline-start: 0;
			}

			&:has(.tabs-scroll-right)::after {
				inset-inline-end: 0;
			}

			.tabs-scroll-left,
			.tabs-scroll-right {
				position: absolute;
				z-index: $db-tabs-z-index-button;
				inset-block: variables.$db-spacing-fixed-xs;
			}

			.tabs-scroll-left {
				inset-inline-start: 0;
			}

			.tabs-scroll-right {
				inset-inline-end: 0;
			}
		}
	}
}

